--- a/setup-rpi-first-time.yml
+++ b/setup-rpi-first-time.yml
@@ -12,7 +12,7 @@
 
   tasks:
     - name: Upgrade all apt packages
-      apt: upgrade=dist force_apt_get=yes
+      apt: upgrade=safe update_cache=yes force_apt_get=yes
 
     - name: Install apt packages
       apt:
@@ -20,36 +20,25 @@
         state: latest
         update_cache: yes
 
-    - name: Setup boot behaviour
-      command: raspi-config nonint do_boot_behaviour B1
-
     - name: Update hostname
-      command: "raspi-config nonint do_hostname {{ hostname }}"
+      hostname:
+        name: "{{ hostname }}"
 
-    - name: Enable ssh
-      command: raspi-config nonint do_ssh 0
-
-    - name: Ensure group "docker" exists
+    - name: Ensure group 'docker' exists
       group:
         name: docker
         state: present
 
-    - name: Add 'pi' user to docker group
+    - name: Add 'ubuntu' user to docker group
       user: 
-        name: pi
+        name: ubuntu
         groups: docker
         state: present
-
-    - name: Change pi user password
-      user:
-        name: pi
-        update_password: always
-        password: "{{ newpassword|password_hash('sha512') }}"
 
     - name: Create user account
       user: 
         name: "{{ lookup('env', 'USER') }}"
-        groups: "adm,dialout,cdrom,sudo,audio,video,plugdev,games,users,input,netdev,lpadmin,gpio,i2c,spi,docker"
+        groups: "ubuntu,adm,dialout,cdrom,floppy,sudo,audio,dip,video,plugdev,netdev,lxd,microk8s"
         shell: /usr/bin/fish
         state: present
 
@@ -89,27 +78,14 @@
         - not add_identity_key is skipped
       notify: restart sshd
 
-    - name: Check unpartitioned space
-      shell: /sbin/parted /dev/mmcblk0 unit gb print free | grep 'Free Space' | tail -n1 | awk '{print $3}'
-      register: unpartitioned
-      changed_when: false
-      failed_when: unpartitioned.stderr != ""
-
-    - name: Expand filesystem to fill disk
-      command: raspi-config nonint do_expand_rootfs
-      when: unpartitioned.stdout != "0.00GB"
-
     - name: Update cgroups settings
       lineinfile:
-        dest: /boot/cmdline.txt
+        dest: /boot/firmware/cmdline.txt
         regexp: '(^(?!.*cgroup_enable.*$)[^\"]+)[\n]'
         backrefs: yes
-        line: '\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory'
+        line: '\1 cgroup_enable=memory cgroup_memory=1'
       register: cmdline
-
-    #- name: Raspberry Pi Firmware upgrade
-    #  command: rpi-update | yes
 
     - name: Reboot system
       reboot:
-      when: (unpartitioned.stdout != "0.00GB") or (cmdline.changed)
+      when: cmdline.changed
