--- a/setup-rpi-first-time.yml
+++ b/setup-rpi-first-time.yml
@@ -35,6 +35,12 @@
         groups: docker
         state: present
 
+    - name: Change 'ubuntu' user password
+      user:
+        name: ubuntu
+        update_password: always
+        password: "{{ newpassword|password_hash('sha512') }}"
+
     - name: Create user account
       user: 
         name: "{{ lookup('env', 'USER') }}"
